2012-12-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/cvss.c, base/cvss.h: New. Implemented by Preeti Subramanian.

	* base/CMakeLists.txt: Add new module cvss to build routines.

2012-12-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Post release version bump.

	* CMakeLists.txt: Set version to 6.0+beta4.

2012-12-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Preparing the openvas-libraries 6.0+beta3 release.

	* CHANGES: Updated.

2012-12-14  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvti.c (nvti_cvss): New. Returns the cvss of a nvt
	as double value.

	* base/nvti.h: Added proto accordingly.

2012-12-13  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/nvti.c (nvti_cvss_base_vector): New. Pulls out the
	cvss_base_vector from the tag string.

	* base/nvti.h: Added proto accordingly.

2012-12-13  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_get_task_ext): New function.

	* omp/omp.h: Add header accordingly.
	(omp_get_task_opts_t): New type.
	(omp_get_task_opts_defaults): New variable.

2012-12-12  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_get_tasks_ext): New function.

	* omp/omp.h: Add header accordingly.
	(omp_get_tasks_opts_t): New type.
	(omp_get_tasks_opts_defaults): New variable.

2012-12-04  Matthew Mundell <matthew.mundell@greenbone.net>

	* omp/omp.c (omp_create_target_ext): Add missing closing slashes in
	credential XML.

2012-11-28  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* nasl/exec.c (cell2bool): Finally remove error message that
	hint at possible wrong usage of this function.

2012-11-23  Werner Koch  <wk@gnupg.org>

	* nasl/nasl_ssh.c: Include gcrypt.h.
	(add_tlv): Fixup negative integer values.
	(mpi_from_gnutls_datum, mpi_to_gnutls_datum): New.  Only used with
	gnutls < 2.11.
	(pkcs8_to_sshprivatekey): Swap P and Q is needed and recompute u.
	Only used with gnutls < 2.11.

2012-11-21  Werner Koch  <wk@gnupg.org>
