@@ -1,3 +1,7 @@
+2012-12-17  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
+
+	* base/nvti.c (nvti_cvss): Compute cvss from cvss_base_vector.
+
 2012-12-16  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* base/cvss.c, base/cvss.h: New. Implemented by Preeti Subramanian.
